fixed overflow problem

--- a/src/components/Data/NumberedData.css
+++ b/src/components/Data/NumberedData.css
@@ -9,7 +9,6 @@
   border: 1px solid rgba(255, 255, 255, 0.108);
   margin: 20px;
   border-radius: 10px;
-  overflow-x: scroll;
 }
 
 .numDataDisplayBox-key {
